--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "whatsapp-web-api": "latest"
+    "whatsapp-web-api": "latest",
+    "chalk": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "~3.0.1"
